--- a/client/src/styles/index.css
+++ b/client/src/styles/index.css
@@ -15,7 +15,7 @@ h1, h2, h3 {
 }
 
 button {
-    background-color: #ffb6c1; /* Light pastel pink */
+    background-color: #cbb3db; /* Light pastel pink */
     border: none;
     border-radius: 5px;
     color: white;
