--- a/client/src/styles/index.css
+++ b/client/src/styles/index.css
@@ -39,7 +39,7 @@ button {
 }
 
 button:hover {
-    background-color: #ff69b4; /* Hot pink on hover */
+    background-color: #fc76b9; /* Hot pink on hover */
 }
 
 .container {
