update new feature and fix UI design

--- a/client/src/styles/index.css
+++ b/client/src/styles/index.css
@@ -30,7 +30,7 @@ h1, h2, h3 {
 }
 
 button {
-    background-color: #cbb3db; /* Light pastel pink */
+    background-color: #bb96d4; /* Light pastel pink */
     border: none;
     border-radius: 5px;
     color: white;
