--- a/client/src/styles/index.css
+++ b/client/src/styles/index.css
@@ -30,7 +30,7 @@ h1, h2, h3 {
 }
 
 button {
-    background-color: #bb96d4; /* Light pastel pink */
+    background-color: #9846ceb7; /* Light pastel pink */
     border: none;
     border-radius: 5px;
     color: white;
@@ -47,4 +47,10 @@ button:hover {
     margin: 0 auto;
     padding: 20px;
     text-align: center;
+}
+
+.form-input-center {
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
