commit new feature

--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -39,7 +39,7 @@ button {
 }
 
 button:hover {
-    background-color: #fc76b9; /* Hot pink on hover */
+    background-color: #df76aae1; /* Hot pink on hover */
 }
 
 .container {
